[3.1.x] Fixed #31853 -- Fixed wrapping of translated action labels in admin sidebar.
Backport of b0af56f639179ac5a70253b07ead8b768c4ef4a9 from master

--- a/django/contrib/admin/static/admin/css/nav_sidebar.css
+++ b/django/contrib/admin/static/admin/css/nav_sidebar.css
@@ -78,6 +78,10 @@
     padding-left: 16px;
 }
 
+#nav-sidebar .module td {
+    white-space: nowrap;
+}
+
 [dir="rtl"] #nav-sidebar .module th,
 [dir="rtl"] #nav-sidebar .module caption {
     padding-left: 8px;
